# GarbageCollector

./: .gitignore  AddProject.bat  BuildWPF.bat  CMakeLists.txt  GenerateAndBuild.bat  PrepareWPFSln.py
api/: CMakeLists.txt  api.cpp  api.h
src/: CMakeLists.txt  Examples.h  main.cpp
src/Allocators/: IAllocator.h
src/Allocators/FreeList/: FreeList.cpp  FreeList.h
src/Collectors/: GCHelpers.h  ICollector.h
src/Collectors/CopyingGC/: CopyingGC.cpp  CopyingGC.h
src/Collectors/MarkCompactGC/: MarkCompactGC.cpp  MarkCompactGC.h
src/Collectors/MarkSweepGC/: MarkSweepGC.cpp  MarkSweepGC.h
src/MemoryManager/: Heap.h  MemoryManager.cpp  MemoryManager.h  ObjectHeader.h
src/Sample/: CMakeLists.txt  Samples.h  main.cpp
src/Stats/: GCStats.h  HeapStats.h
src/Utils/: alloc-util.h  alloc_util.cpp  common.h  log-util.h  number-util.h  stat-util.h  timer-util.h
src/Value/: Value.cpp  Value.h
test/: APITest.cpp  CMakeLists.txt  CopyingGCTest.cpp  FreeListAllocatorTest.cpp  GCHelpersTest.cpp  HeapTest.cpp  MarkCompactGCTest.cpp  MarkSweepGCTest.cpp  MemoryManagerTest.cpp  ObjectHeaderTest.cpp  StatTest.cpp  ValueTest.cpp  main.cpp
viz/GCviz/: Directory.Build.props  GCviz.sln
viz/GCviz/GCviz/: App.xaml  App.xaml.cs  GCviz.csproj  GCviz.csproj.Backup.tmp  MainWindow.xaml  MainWindow.xaml.cs
viz/GCviz/GCviz/DllWrappers/: GCAPI.cs
viz/GCviz/GCviz/GC/Data/: Data.xaml  Data.xaml.cs
viz/GCviz/GCviz/GC/VizData/: VizData.xaml  VizData.xaml.cs
viz/GCviz/GCviz/Heap/Data/: Data.xaml  Data.xaml.cs
viz/GCviz/GCviz/Heap/VizData/: VizData.xaml  VizData.xaml.cs
viz/GCviz/GCviz/Menu/: Menu.xaml  Menu.xaml.cs
viz/GCviz/GCviz/Properties/: launchSettings.json
viz/GCviz/GCviz/Utils/: InfoCard.xaml  InfoCard.xaml.cs
